<resources>
    <string name="app_name">Cinema App</string>

    <!--Strings for the Home Page Buttons-->
    <string name="home_register_button_label">Register a Movie</string>
    <string name="home_display_button_label">Display Movies</string>
    <string name="home_favorites_button_label">Favorites</string>
    <string name="home_edit_button_label">Edit Movies</string>
    <string name="home_search_button_label">Search Movies</string>
    <string name="home_ratings_button_label">View Movie Ratings</string>

    <!--Strings for the Register Page TextBoxes-->
    <string name="register_title_textbox_label">Movie Title</string>
    <string name="register_year_textbox_label">Year Released</string>
    <string name="register_director_textbox_label">Director Name</string>
    <string name="register_actor_actress_textbox_label">Actor and Actresses (Separate with ",")</string>
    <string name="register_rating_textbox_label">Rating (0–10)</string>
    <string name="register_review_textbox_label">Review</string>

    <!--Strings for the Display Page TextBoxes-->
    <string name="display_favorite_button_label">Save Favorites</string>

    <!--Strings for the Favorite Page TextBoxes-->
    <string name="favorites_deselect_favorite_button_label">Remove from Favorites</string>

    <!--Strings for the Edit Page TextBoxes-->
    <string name="edit_movie_button_label">Edit Movie</string>

    <!--Strings for the Search Page TextBoxes-->
    <string name="search_movie_button_label">Search</string>

    <!--Strings for the Search Page TextBoxes-->
    <string name="ratings_movie_button_label">Find Rating</string>

    <!--Strings for the Search Page TextBoxes-->
    <string name="movie_poster_image_view_content_description">Movie Poster</string>

    <!--Strings for Custom Layouts-->
    <string name="loading_label_progress_dialog">Loading …</string>
</resources>