<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/homeRegisterButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_register_button_label"

        app:layout_constraintBottom_toTopOf="@+id/homeDisplayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeDisplayButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_display_button_label"
        app:layout_constraintBottom_toTopOf="@+id/homeFavoriteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRegisterButton" />


    <Button
        android:id="@+id/homeFavoriteButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_favorites_button_label"
        app:layout_constraintBottom_toTopOf="@+id/homeEditButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeDisplayButton" />

    <Button
        android:id="@+id/homeEditButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_edit_button_label"
        app:layout_constraintBottom_toTopOf="@+id/homeFilterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeFavoriteButton" />

    <Button
        android:id="@+id/homeFilterButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_filter_button_label"
        app:layout_constraintBottom_toTopOf="@+id/homeRatingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeEditButton" />

    <Button
        android:id="@+id/homeRatingsButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/home_ratings_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeFilterButton" />


</androidx.constraintlayout.widget.ConstraintLayout>